# veriT

./: AUTHORS  LICENSE  Makefile.am  Makefile.in  README.md  README_DEV.md  aclocal.m4  configure  configure.ac
.github/workflows/: blank.yml
example/: prepro.smt2  xor_unsound.smt2
example/define-fun/: cnst.smt2  eq.smt2
example/proof/: la_test.smt2  la_test_2.smt2  la_test_2p.smt2  la_test_3.smt2  la_test_4.smt2  la_test_p.smt2  qnt-simplify_1.smt2  quant-clausify_1.smt2  quant-clausify_2.smt2  step-simp_1.smt2  step-simp_2.smt2  step-simp_3.smt2
src/: Makefile.am  complete.c  complete.h  config.h.in  hint.c  hint.h  main.c  response.c  response.h  undo.c  undo.h  veriT-config.h  veriT-state.c  veriT-state.h  veriT.c  veriT.h
src/SAT/: veriT-SAT.c  veriT-SAT.h
src/arith/: LA-hw.c  LA-hw.h  LA-mp.c  LA-mp.h  LA-pre.c  LA-pre.h  LA-xx.c.tpl  LA-xx.h.tpl  LA.c  LA.h  eq-store.c  eq-store.h  numbers-hw.c  numbers-hw.h  numbers-mp.c  numbers-mp.h  numbers-xx.h.tpl  simplex-hw.c  simplex-hw.h  simplex-mp.c  simplex-mp.h  simplex-xx.c.tpl  simplex-xx.h.tpl  simplex.c  simplex.h  totality.c  totality.h
src/bool/: bool.c  bool.h  clause.c  cnf.c  cnf.c.tpl  cnf.h  literal.c  literal.h
src/congruence/: congruence.c  congruence.h
src/instantiation/: ccfv-bckt.c  ccfv-bckt.h  ccfv-constr.c  ccfv-constr.h  ccfv-mod.c  ccfv-mod.h  ccfv.c  ccfv.h  discrimination-tree.c  discrimination-tree.h  free-vars.c  free-vars.h  inst-create.c  inst-create.h  inst-del.c  inst-del.h  inst-enum.c  inst-enum.h  inst-index.c  inst-index.h  inst-man.c  inst-man.h  inst-pre.c  inst-pre.h  inst-strategy.h  inst-symbs.c  inst-symbs.h  inst-trigger-selection.c  inst-trigger-selection.h  inst-trigger.c  inst-trigger.h  syntactic-unify.c  syntactic-unify.h  ujobs.c  ujobs.h  unify.c  unify.h
src/parsers/dimacs/: dimacs.c  dimacs.h
src/parsers/smtlib2/: smtfun.c  smtfun.h  smtlex.c  smtlex.l  smtlib2.h  smtsyn.c  smtsyn.h  smtsyn.y  smttypes.h
src/pre/: HOL.c  HOL.h  bclauses.c  bclauses.h  bfun-elim.c  bfun-elim.h  binder-rename.c  binder-rename.h  connectives.c  connectives.h  distinct-elim.c  distinct-elim.h  fix-trigger.c  fix-trigger.h  ite-elim.c  ite-elim.h  let-elim.c  let-elim.h  nary-elim.c  nary-elim.h  pm.c  pm.h  pre.c  pre.h  qnt-tidy.c  qnt-tidy.h  qnt-trigger.c  qnt-trigger.h  qsimp-by-unification.c  qsimp-by-unification.h  rare-symb.c  rare-symb.h  simp-formula-sat.c  simp-formula-sat.h  simp-node-proof.c  simp-node-proof.h  simp-sym.c  simp-sym.h  simp-unit.c  simp-unit.h  (+6 more)
src/proof/: proof-checking.c  proof-checking.h  proof-id.c  proof-id.h  proof-lemma-hash.c  proof-lemma-hash.h  proof-output.c  proof-output.h  proof-print.c  proof-print.h  proof-rules-tautologies.c  proof-rules-tautologies.h  proof-rules.c  proof-rules.h  proof-sat-solver.c  proof-sat-solver.h  proof-step-hash.c  proof-step-hash.h  proof-step-table.c  proof-step-table.h  proof-step.c  proof-step.h  proof-subproof.c  proof-subproof.h  proof-type.c  proof-type.h  proof-unsat-core.c  proof-unsat-core.h  proof.c  proof.h
src/symbolic/: DAG-arith.c  DAG-arith.h  DAG-flag.c  DAG-flag.h  DAG-print.c  DAG-print.h  DAG-prop.c  DAG-prop.h  DAG-ptr.h  DAG-smtlib.c  DAG-sort-pm.c  DAG-sort-pm.h  DAG-sort.c  DAG-sort.h  DAG-stat.c  DAG-stat.h  DAG-subst.c  DAG-subst.h  DAG-symb-DAG.c  DAG-symb-DAG.h  DAG-symb.c  DAG-symb.h  DAG-tmp.c  DAG-tmp.h  DAG.c  DAG.h  context-handling.c  context-handling.h  context-recursion-proof.c  context-recursion-proof.h  context-recursion.c  context-recursion.h  dbg-trigger.c  dbg-trigger.h  polarities.c  polarities.h  qnt-utils.c  qnt-utils.h  recursion.c  recursion.h  (+2 more)
src/utils/: assoc.h  bitset.c  bitset.h  dll-DAG.h  dll-TYPE.tpl  dll.c  dll.h  general.c  general.h  h-util.c  h-util.h  h.h  ha.c.tpl  hash.c  hash.h  hashmap.c  hashmap.h  hk.h  list.c  list.h  nonce.c  nonce.h  options.c  options.h  stack.h  statistics.c  statistics.h  sys.c  sys.h  table.c  table.h  types.h  veriT-qsort.c  veriT-qsort.h  veriT-signal.c  veriT-signal.h
src/veriT-SAT/: main.c
test/: Makefile.am  main.c  picotest.h
test/suits/: discrimination-tree.h  syntactic-unify.h
